# curses-game-wrapper

./: .gitignore  .travis.yml  Cargo.toml  README.md  README.org  rogue.scr
examples/: rogue.rs
src/: game_data.rs  lib.rs  term_data.rs
