[package]
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
name = "curses-game-wrapper"
version = "0.0.1"

[dependencies]
ascii = "0.8.6"
bitflags = "1.0.1"
vte = "0.3.2"

[dependencies.sloggers]
path = "../sloggers"

[dependencies.slog]
version = "2.0.12"
features = ["max_level_trace", "release_max_level_warn"]

